--- a/src/components/PokemonDetails/PokemonDetails.css
+++ b/src/components/PokemonDetails/PokemonDetails.css
@@ -36,16 +36,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .morePokemon{
-    margin-top: 2rem;
-    letter-spacing: 0.25rem;
-    font-size: larger;
+    margin: 2rem auto;
+    font-size: small;
     font-weight: bold;
     text-transform: uppercase; 
     color: #cac8cc; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     padding-bottom: 10px; 
     letter-spacing: 3px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.morePokemon > span{
+    letter-spacing: 0.25rem;
+    font-size: x-large;
+    font-weight: bold;
+    text-transform: uppercase; 
+    color: #87a46d; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);  
+    letter-spacing: 3px;
+    margin-left: 20%;
+    
+}
+
+.pokemonList {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-gap: 10px; 
+    align-items: center;
+    justify-content: center;
+}
+
+.pokemonList li {
+    list-style: none; /* Remove bullet points */
+    padding: 1px; /* Add padding to list items */
 }
